# DirectXMath

./: CMakeLists.txt  README.md
Extensions/: DirectXMathAVX.h  DirectXMathAVX2.h  DirectXMathBE.h  DirectXMathF16C.h  DirectXMathFMA3.h  DirectXMathFMA4.h  DirectXMathSSE3.h  DirectXMathSSE4.h
Inc/: DirectXCollision.h  DirectXColors.h  DirectXMath.h  DirectXMathConvert.inl  DirectXMathMatrix.inl  DirectXMathMisc.inl  DirectXMathVector.inl  DirectXPackedVector.h  DirectXPackedVector.inl
MatrixStack/: DirectXMatrixStack.h
XDSP/: XDSP.h
